# ShipmentPlaner

./: README.md
ProiectCorbean/: CMakeLists.txt  SubOrder.h  dbmanager.cpp  dbmanager.h  generateDB.sql  mainwindow.cpp  mainwindow.h  mainwindow.ui  order.cpp  order.h  suborder.cpp
ProiectCorbean/Dialogs/: dlgorders.cpp  dlgorders.h  dlgorders.ui  dlgshipments.cpp  dlgshipments.h  dlgshipments.ui
ProiectCorbean/Shipment/: planeshipment.cpp  planeshipment.h  shipment.cpp  shipment.h  shipmentfactory.cpp  shipmentfactory.h  trainshipment.cpp  trainshipment.h
ProiectCorbean/TestFiles/: NewOrder.csv
